tests/basic/fun_assert_false_11.pan.out
tests/basic/fun_assert_false_11.pan:4:1-5: error: unable to verify type of f41a
tests/basic/fun_assert_false_11.pan:7:1-5: error: unable to verify type of f41b
tests/basic/fun_assert_false_11.pan:10:1-5: error: unable to verify type of f42a
tests/basic/fun_assert_false_11.pan:13:1-5: error: unable to verify type of f42b
tests/basic/fun_assert_false_11.pan:16:1-4: error: unable to verify type of f43
tests/basic/fun_assert_false_11.pan:19:1-5: error: unable to verify type of f43b